--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ file(GLOB_RECURSE
     CONFIGURE_DEPENDS
       "${CMAKE_CURRENT_SOURCE_DIR}/src/*.[hc]"
       "${CMAKE_CURRENT_SOURCE_DIR}/src/*.[hc]pp"
+      "${CMAKE_CURRENT_SOURCE_DIR}/extern/glad/src/*.c"
 )
 
 add_executable(${PROJECT_NAME}
@@ -79,6 +80,7 @@ target_compile_features(${PROJECT_NAME} PRIVATE
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
   NOMINMAX
+  # KHRONOS_STATIC
   ROGUELIKE_TESTS_ENABLED
 
   $<$<CONFIG:Debug>:
@@ -106,7 +108,7 @@ target_compile_options(${PROJECT_NAME} PRIVATE
 
 target_include_directories(${PROJECT_NAME}
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src"
-  PRIVATE SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/extern/glad/include"
+  SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/extern/glad/include"
 )
 
 target_link_libraries(${PROJECT_NAME}
