--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ target_compile_features(${PROJECT_NAME}
 target_compile_definitions(${PROJECT_NAME}
   PRIVATE
     ROGUELIKE_TESTS_ENABLED
+	  NANOVG_GL3_IMPLEMENTATION
     NANOGUI_USE_OPENGL
     NANOGUI_GLAD
     KHRONOS_STATIC
